--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = lolin_s2_mini
 framework = arduino
-lib_deps = adafruit/Adafruit SSD1306@^2.5.9
+lib_deps = 
+	;adafruit/Adafruit SSD1306@^2.5.9
+	witnessmenow/UniversalTelegramBot@^1.3.0
