--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif32
 board = lolin_s2_mini
 framework = arduino
-lib_deps = 
-	witnessmenow/UniversalTelegramBot@^1.3.0
+lib_deps =
+	adafruit/Adafruit SSD1306@^2.5.9
+	;witnessmenow/UniversalTelegramBot@^1.3.0
